# VectorSearchForge

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  cagraindex-test-with-ids.txt  linux_arm_cpu.yml  linux_x64_cuda12_raft24_06.yml
benchmarking/: Dockerfile  README.md  benchmarks.yml  config.py  gpu_metrics.py  main.py  requirements.txt  results.py  test_imports.py
benchmarking/data_types/: data_types.py
benchmarking/dataset/: dataset_utils.py
benchmarking/indexing/cpu/: create_cpu_index.py
benchmarking/indexing/gpu/: create_gpu_index.py
benchmarking/memory_profiler/: gpu_memory_profiler.py  memory_monitor.py
benchmarking/search/: search_indices.py
benchmarking/service/: faiss_index_build_service.py
benchmarking/utils/: common_utils.py
benchmarking/workload/: workload.py
cpp/: CMakeLists.txt  faiss-test.cpp  run-gpu-graph-on-cpu.cpp
cpp/gpu/: cagra-gpu-index.cpp
custom-faiss-installed-image/: 0001-added-commit-to-enable-the-add_with_ids-function-on-.patch  Dockerfile  README.md  build-docker-image.sh  build-faiss.sh  create-dataset.py  faiss-test.py  temp.txt
cuvs_benchmarks/: .gitignore  Dockerfile  README.md  environment.yml  faiss_cagra_test.py  main.py  test_imports.py
model-endpoint/: Dockerfile  README.md  add_auto_scaling_policy.py  add_auto_scaling_policy_v2.py  build_and_push.sh  create_endpoint_async.py  create_model.py  invoke_endpoint.py  invoke_endpoint_async.py
model-endpoint/model_server/: requirements.txt  serve  server.py  wsgi.py
model-endpoint/old/: create_endpoint.py
os_benchmarks/: Readme.md  run_benchmarks.sh
python/: benchmarks.yml  cpu-search-benchmarks-cagra.py  faiss-test.py  indexing_main.py  main.py  results.py
python/cpu/: create_cpu_index.py
python/data_types/: data_types.py
python/dataset/: dataset.py  dataset_utils.py
python/decorators/: timer.py
python/gpu/: create-gpu-index.py  create_gpu_index.py
python/indexing/cpu/: create_cpu_index.py
python/indexing/gpu/: create_gpu_index.py
python/search/: search_indices.py
python/utils/: common_utils.py
python/workload/: workload.py
remote-index-build-service/: Dockerfile  Readme.md  app.py  docker-compose-gpu.yml  docker-compose.yml  requirements.txt
remote-index-build-service/coordinator/: Dockerfile  app.py  docker-compose.yml  workers_seed.json
remote-index-build-service/coordinator/client/: worker_client.py
remote-index-build-service/coordinator/util/: common.py
remote-index-build-service/ecs-cluster/: .gitignore  README.md  coordinator_stack.ts  gpu_worker_stack.ts  index.ts  package.json
remote-index-build-service/index_builder/: indexing_service.py  vector_index_builder.py
remote-index-build-service/index_builder/gpu/: create_gpu_index.py
remote-index-build-service/models/: data_model.py
remote-index-build-service/s3/: s3client.py
remote-index-build-service/utils/: common.py
remote-index-build-service/utils/decorators/: timer.py
remote-index-build-service/vector_data_accessor/: accessor.py
remote-index-build-service/worker/: Dockerfile  Dockerfile-gpu  Readme.md  app.py  docker-compose.yml  logging.ini  requirements-gpu.txt  requirements.txt
remote-index-build-service/worker/index_builder/: indexing_service.py  vector_index_builder.py
remote-index-build-service/worker/index_builder/cpu/: create_cpu_index.py
remote-index-build-service/worker/index_builder/gpu/: create_gpu_index.py
remote-index-build-service/worker/models/: data_model.py
remote-index-build-service/worker/s3/: s3client.py
remote-index-build-service/worker/vector_data_accessor/: accessor.py
scripts/: gpu_metrics.sh
testing_nvidia_docker/: Dockerfile  faiss-test.py
